@@ -368,4 +368,3 @@ delta_ok( $ys, 111692.604306881 );
 ( $ys, $xs ) = $e->scales(89);
 delta_ok( $xs, 1949.32672711493 );
 delta_ok( $ys, 111693.635638667 );
-
