@@ -972,4 +972,3 @@ delta_within( $a, 202.024485782197, 0.0001 );
 ( $r, $a ) = $e->to(45.494490, 42.178744,-62.327500, 251.688039);
 delta_ok( $r, 17356605.1087735 );
 delta_within( $a, 214.442967212505, 0.0001 );
-
