@@ -710,4 +710,3 @@ delta_ok( $lat1, -70.0019179240387 );
 delta_ok( $lon1, 165.578716457451 );
 delta_ok( $lat2, -70.0019179240387 );
 delta_ok( $lon2, 165.578716457451 );
-
