@@ -2697,4 +2697,3 @@ delta_within( $r2, 17356.6051087735, 1.0 );
 delta_within( $r3, 10784.8944096312, 1.0 );
 delta_within( $r4, 56944242.4828528, 1.0 );
 delta_within( $r5, 9371.81701337664, 1.0 );
-
