@@ -1306,4 +1306,3 @@ delta_within( $azp, 214.442967212505, 0.1 );
 
 $azs = $e_sym->bearing(45.494490,42.178744,-62.327500,251.688039);
 delta_within( $azs, -145.557032787495, 0.1 );
-
