@@ -410,4 +410,3 @@ delta_within( $y, -4571.75406452734, 1.0 );
 ($x, $y) = $e1->displacement(-69.938162,165.492639,-70.001918,165.578716);
 delta_within( $x, 3286.68608014123, 1.0 );
 delta_within( $y, -7115.04613475392, 1.0 );
-
