@@ -1,0 +1,15 @@
+#!perl
+
+BEGIN {
+    unless ($ENV{RELEASE_TESTING}) {
+        print "1..0 # SKIP these tests are for release candidate testing";
+        exit;
+    }
+}
+
+use strict;
+use warnings;
+
+use Test::Whitespaces {
+    dirs => [ 'lib', 't', 'examples' ],
+};
